# disaster-rescue-hub

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  manager.py  robot_agent.py
backend/app/api/: deps.py  router.py
backend/app/communication/: blackboard.py  fusion.py
backend/app/core/: config.py  constants.py  event_bus.py  exceptions.py  middleware.py  security.py
backend/app/db/: base.py  session.py
backend/app/dispatch/: __init__.py  bidding.py  rule_engine.py
backend/app/experiments/: runner.py
backend/app/models/: __init__.py  alert.py  blackboard.py  dispatch.py  intervention.py  replay.py  robot.py  task.py  user.py
backend/app/perception/: service.py
backend/app/replay/: __init__.py  snapshot_recorder.py  timeline_player.py
backend/app/repositories/: alert.py  auction.py  bid.py  blackboard.py  experiment.py  intervention.py  replay.py  robot.py  robot_fault.py  robot_state.py  task.py  task_assignment.py  user.py
backend/app/schemas/: alert.py  auth.py  blackboard.py  common.py  dispatch.py  error.py  experiment.py  intervention.py  pagination.py  perception.py  replay.py  robot.py  situation.py  task.py
backend/app/services/: alert_service.py  auth_service.py  blackboard_cleanup.py  dispatch_service.py  dispatch_trigger.py  recall_service.py  replay_service.py  robot_service.py  task_service.py  (+1 more)
backend/migrations/: env.py
backend/scripts/: gen_paper_charts.py  run_experiments.py  selfcheck_p8_1.py  selfcheck_p8_2.py  show_exp_stats.py
(+92 files in other folders)
